<?xml version="1.0" encoding="utf-8"?>
<!--/*====*====*====*====*====*====*====*====*====*====*====*====*====*====*====*
  Copyright (c) Qualcomm Technologies, Inc. and/or its subsidiaries.
  All rights reserved.
  Confidential and Proprietary - Qualcomm Technologies, Inc.
=============================================================================*/-->

<resources>

    <string name="app_name">SnapdragonSDKTest</string>
    <string name="str_proximity_geofencelisttab_add">Add</string>
    <string name="str_proximity_geofencelisttab_delet">Delete</string>
    <string name="str_proximity_geofencelisttab_edit">Edit</string>
    <string name="str_proximity_geofencelisttab_pause">Pause</string>
    <string name="str_proximity_geofencelisttab_resume">Resume</string>
    <string name="str_proximity_geofencelisttab_recover">Recover All</string>

    <string name="str_Name">Geofence Name</string>
    <string name="str_Latitude">Latitude</string>
    <string name="str_Longitude">Longitude</string>
    <string name="str_Radius">Radius</string>
    <string name="str_TransitionType">Transition Type (0-3)</string>
    <string name="str_DwellType">Dwell Type (0-3)</string>
    <string name="str_DwellTime">DwellTime (secs)</string>
    <string name="str_Confidence">Confidence (1-3)</string>
    <string name="str_Responsiveness">Responsiveness</string>

    <string name="str_registerForDebugReport">Register</string>
    <string name="str_unregisterForDebugReport">UnRegister</string>
    <string name="str_getDebugReport">Get Report</string>

    <string name="str_registerForXtraStatus">RegXtraStat</string>
    <string name="str_unregisterForXtraStatus">UnRegXtraStat</string>
    <string name="str_getXtraStatus">GetXtraStat</string>

    <string name="str_start_flp_session">Start FLP Session</string>
    <string name="str_stop_flp_session">Stop FLP Session</string>
    <string name="str_switch_flp_session">Switch Mode (Trip / Routine)</string>
    <string name="str_pull_locations">Pull Locations</string>

    <string name="str_start_pp_session">Start PP Session</string>
    <string name="str_stop_pp_session">Stop PP Session</string>
    <string name="str_ntrip_config">Ntrip Config</string>
    <string name="str_ppTimeInterval">Time Interval(ms)</string>
    <string name="str_preciseType">Precise Type(1-MLP 2-DLP 3-WOCS)</string>
    <string name="str_correctionType">Correction Type(1-DEFAULT 2-RTCM 3-3GPP)</string>
    <string name="str_hostName">Host Name</string>
    <string name="str_port">Port</string>
    <string name="str_userName">User Name</string>
    <string name="str_password">Password</string>
    <string name="str_point">Mount Point</string>
    <string name="str_nmeaInterval">NMEA Interval</string>

    <string name="str_SessionName">Session Name</string>
    <string name="str_TrackingMode">Tracking</string>
    <string name="str_RoutineMode">Routine</string>
    <string name="str_TripMode">Trip</string>
    <string name="str_TimeInterval">Time Interval</string>
    <string name="str_DistanceInterval">Distance Interval (meters)</string>
    <string name="str_TripDistance">Trip Distance (meters)</string>

    <string name="str_enable">Throttle On</string>
    <string name="str_disable">Throttle Off</string>

    <string-array name="gtp_acc_array">
        <item>Nominal Accuracy</item>
        <item>High Accuracy</item>
    </string-array>
</resources>
