<!--*====*====*====*====*====*====*====*====*====*====*====*====*====*====*====*
  Copyright (c) 2017 Qualcomm Technologies, Inc.
  All Rights Reserved.
  Confidential and Proprietary - Qualcomm Technologies, Inc.
=============================================================================*-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
            android:id="@+id/registerBtn"
            android:layout_width="93dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/str_registerForDebugReport" />

     <Button
            android:id="@+id/unregisterBtn"
            android:layout_width="93dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/registerBtn"
            android:text="@string/str_unregisterForDebugReport" />

     <Button
            android:id="@+id/getReportBtn"
            android:layout_width="93dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/unregisterBtn"
            android:text="@string/str_getDebugReport" />

    <Button
            android:id="@+id/registerXtraStatusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerBtn"
            android:text="@string/str_registerForXtraStatus" />

     <Button
            android:id="@+id/unregisterXtraStatusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/unregisterBtn"
            android:layout_toRightOf="@+id/registerXtraStatusBtn"
            android:text="@string/str_unregisterForXtraStatus" />

     <Button
            android:id="@+id/getXtraStatusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getReportBtn"
            android:layout_toRightOf="@+id/unregisterXtraStatusBtn"
            android:text="@string/str_getXtraStatus" />
</RelativeLayout>
